--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -192,14 +192,7 @@
 
                 <div class="picture">
                     <i class="far fa-heart"></i>
-                    <!-- <label class="like">
-                        <input type="checkbox" />
-                        <div class="hearth" />
-                    </label>
-                    <a class="dribbble" href="https://dribbble.com/TaminoMartinius" target="_blank">
-                        <img src="https://cdn.dribbble.com/assets/dribbble-ball-mark-2bd45f09c2fb58dbbfb44766d5d1d07c5a12972d602ef8b32204d28fa3dda554.svg"
-                            alt="" />
-                    </a> -->
+
 
 
                     <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0086954_x-speedflow1-messi-firm-ground-boots_fy6879_side-lateral-center-view.jpeg"
@@ -224,7 +217,7 @@
                     <i class="far fa-heart"></i>
 
                     <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0096747_adistar-shoes_gx3000_side-lateral-center-view.jpeg"
-                        alt="Card Back">
+                        alt="">
 
                     <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0096748_adistar-shoes_gx3000_top-portrait-view.jpeg"
                         class="img-top" alt="Card Front">
@@ -789,8 +782,10 @@
                 <li>lorem</li>
                 <li>lorem</li>
             </ul>
+
         </div>
     </div>
+
     <div id="rootCart"></div>
     <div id="wishList"></div>
 
