--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -19,7 +19,7 @@
 
 <body id="bodystore">
     <div class="blurwrapper"></div>
-    <section class='home'>
+    <section class='home' id="home">
         <div class="homeopacity">
             <nav class="navbar">
 
@@ -32,7 +32,7 @@
                 <div class="mlogo"><img src="http://en.fusushi.co.il/warehouse/dynamic/55246.png" alt=""></div>
 
                 <ul class='navtags'>
-                    <li>Home</li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#aboutus">About Us</a></li>
                     <li>Order Online</li>
                     <li>Table Reservation</li>
@@ -41,7 +41,7 @@
                     <li>Gallery</li>
                     <li>Contact US</li>
                     <li>Gift Card</li>
-                    <li class='smedia'><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i></li>
+                    <li class='smedia'><a href="https://www.facebook.com/pages/Fu-Sushi-Tel-Aviv/259322450761653"><i class="fab fa-facebook"></i></a><a href="https://www.instagram.com/fusushitlv/"></i><i class="fab fa-instagram"``></a></i></li>
                 </ul>
 
             </nav>
@@ -51,7 +51,7 @@
             <div class="footer">
                 <div class="footer__whatsapp">
                     <p>Chat with the restaurant</p>
-                    <div class="wapic"><img src="img/whatsapp.png" alt='chat with restaurant' draggable="false"></div>
+                    <div class="wapic"><a href="https://api.whatsapp.com/send/?phone=%2B972502671666textapp_absent=0"><img src="img/whatsapp.png" alt='chat with restaurant' draggable="false"></a></div>
                 </div>
                 <div class="footer__arrowpics">
                     <div class="footer__arrowpics__pics"><i class="far fa-circle"></i><i class="far fa-circle"></i><i
@@ -66,10 +66,10 @@
 
     </section>
 
-    <section class='lobby'>
+    <section class='lobby' id="aboutus">
 
         <div class="lobby__description">
-            <h2 id="aboutus">About Us</h2>
+            <h2>About Us</h2>
             <p>Welcome to FU sushi bar, where every dish is prepared to perfection. Enjoy Tel Aviv's energetic vibe in
                 our unique ambiance. Whether you are on a date, out with friends or just have a nighttime craving for
                 excellent sushi, FU is the ultimate place to be. We are open daily from 12:00 p.m to 0:00 a.m. and would
@@ -230,3 +230,4 @@
 </body>
 
 </html>
+
