--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -56,22 +56,6 @@
         <div class="nav-bar__item">CUSTOMER SERVICE</div>
         <div class="nav-bar__item">SEARCH</div>
     </div>
-    <!-- <div class="scene">
-        <div class="carousel">
-            <img id="pic1"
-                src="https://aviatorwatch.swiss/assets/banners/home/mig29/AVIATOR-WATCH--MIG-29-SMT_1600px.webp" alt="">
-            <img id="pic2"
-                src="https://aviatorwatch.swiss/assets/banners/home/airacobra/AVIATOR-WATCH--AIRACOBRA_1600px.webp"
-                alt="">
-            <img id="pic3"
-                src="https://aviatorwatch.swiss/assets/banners/home/bristol/AVIATOR-WATCH--BRISTOL_1600px.webp" alt="">
-            <img id="pic4"
-                src="https://aviatorwatch.swiss/assets/banners/home/dc3/AVIATOR-WATCH--DOUGLAS-DC-3_2560px.webp" alt="">
-            <img id="pic5"
-                src="https://aviatorwatch.swiss/assets/banners/home/daydate41/AVIATOR-WATCH--DOUGLAS-DAY-DATE-41--V.3.35.2.279.4_1600px.webp">
-            <img src="https://aviatorwatch.swiss/assets/banners/brand/about/aviation/PILOT_TESTED_1280px.webp" alt="">
-        </div>
-    </div> -->
     <div class="filter-bar">
         <div class="filter-bar__item">All Watches</div>
         <div class="filter-bar__item drop">Group</div>
@@ -84,7 +68,22 @@
         <div class="filter-bar__item drop">Bracelet</div>
         <div class="filter-bar__item drop">Sort by</div>
     </div>
-
+    <div class="scene">
+        <div class="carousel rotate" >
+            <img id="pic1" 
+                src="https://aviatorwatch.swiss/assets/banners/home/mig29/AVIATOR-WATCH--MIG-29-SMT_1600px.webp" alt="">
+            <img id="pic2"
+                src="https://aviatorwatch.swiss/assets/banners/home/airacobra/AVIATOR-WATCH--AIRACOBRA_1600px.webp"
+                alt="">
+            <img id="pic3"
+                src="https://aviatorwatch.swiss/assets/banners/home/bristol/AVIATOR-WATCH--BRISTOL_1600px.webp" alt="">
+            <img id="pic4"
+                src="https://aviatorwatch.swiss/assets/banners/home/dc3/AVIATOR-WATCH--DOUGLAS-DC-3_2560px.webp" alt="">
+            <img id="pic5"
+                src="https://aviatorwatch.swiss/assets/banners/home/daydate41/AVIATOR-WATCH--DOUGLAS-DAY-DATE-41--V.3.35.2.279.4_1600px.webp">
+        </div>
+    </div>
+    
     <div class="filter-dropbar">
         <div class="filter-dropbar__group"></div>
         <div class="filter-dropbar__group">
@@ -169,7 +168,7 @@
     <div id="footer">
         <a href="owner.html">Owner Page</a>
         <p>Created by Andrew Noa & Tamir</p>
-        <p>Aviator Watch S.A.
+        <p onclick="handleRotate()">Aviator Watch S.A.
             Chemin du val, 2
             CH-2900 Porrentruy
             Switzerland</p>
