--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -56,6 +56,9 @@
         <div class="nav-bar__item">CUSTOMER SERVICE</div>
         <div class="nav-bar__item">SEARCH</div>
     </div>
+
+    <img id="banner" src="https://aviatorwatch.swiss/assets/banners/brand/about/aviation/PILOT_TESTED_1280px.webp" alt="">
+
     <div class="filter-bar">
         <div class="filter-bar__item">All Watches</div>
         <div class="filter-bar__item drop">Group</div>
