--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -785,7 +785,7 @@
         </div>
 
         <div id="rootCart"></div>
-        <div id="wishList"></div>
+        <div id="rootWishList"></div>
 
 
 
