--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -154,7 +154,7 @@
                 <option value="startPosition" > </option>
                 <option value="letterAsc"> </option>
                 <option value="letterDsc"> </option>
-                <option value="priceAsc"  onchange="handleSort(event)">high to low </option>
+                <option value="priceAsc">high to low </option>
                 <option value="priceDsc">low to high </option>
             </select>
 
