--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -159,8 +159,8 @@
             </select>
 
         </div>
-        <div id="rootCards" class="cards">
-            <div id="rootCustomer">
+        <!-- <div id="rootCards" > -->
+            <div id="rootCustomer"class="cards">
 
             </div>
 
@@ -587,7 +587,7 @@
                 </div>
             </div>
         </div> -->
-        </div>
+        <!-- </div> -->
         <div class="footer">
 
 
