--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+    <nav role="navigation between pages">
+        <a href="./Bookie.html">Store</a>
+        <a href="./myBookie.html">Owner</a>
+    </nav>
     <!--Omri-->
     <header>
         <div class="navBar">
