--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
@@ -31,6 +31,7 @@
                 <i id="shoppingCartBtn" class="fas fa-shopping-cart fa-2x"></i><p id="shoppingCartBtn" class="btnDiscription">Shopping cart</p></button>
              </div>
              <div class="container_header-dropDown">
+                 <div class="container_header-dropDown-totalCart"></div>
              </div>             
          </div>
          <div class="container-imgsBox" id="ImgsBox"></div>
@@ -50,6 +51,10 @@
 
  <div class="container-shoppingCart">
     <div id="shoppingCartDisplay" class="container-shoppingCart_display"></div>
+    <div class="container-shoppingCart-orderAndTotal">
+        <p class="totalCart"></p>
+        <button type="button" class="container-shoppingCart-orderAndTotal-btn">Order now</button>
+    </div>
  </div>
          
 </div>
