--- a/תרגול/08.02.22/noa/index.html
+++ b/תרגול/08.02.22/noa/index.html
@@ -65,7 +65,8 @@
                 <input class="tax1" type="checkbox" id="Eligible for Tax Refund" value="Eligible for Tax Refund">
                 <label class="tax1" for="Eligible for Tax Refund">Eligible for Tax Refund</label>
 
-                <input class="tax1" type="checkbox" id="Not Eligible for Tax Refund" value="Not Eligible for Tax Refund">
+                <input class="tax1" type="checkbox" id="Not Eligible for Tax Refund"
+                    value="Not Eligible for Tax Refund">
                 <label class="tax1" for="Not Eligible for Tax Refund">Not Eligible for Tax Refund</label>
             </div>
             <input type="checkbox" id="Corresponding to loan" value="Corresponding to loan">
