--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -22,8 +22,8 @@
 
 <body onload="handleRenderByGender('women')" >
 
-    <!-- <div class="cart" style="position:sticky;width:300px;height:400px;background-color: green;top:30vh;z-index: 1;">    
-    </div> -->
+    <div class="cart" style="position:sticky;width:300px;height:400px;background-color: green;top:30vh;z-index: 1;">    
+    </div>
 
     <div class="container">
 
@@ -112,8 +112,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="childrenGucci.html" class="container__navBar2__catergory">CHILDREN </a>
-                        <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -200px;">
+                    <li class="active"><a href="childrenGucci.html" class="container__navBar2__catergory">CHILDREN </a>
+                        <div class="container__navBar2__dropdown" id='children-dropdown' >
                             <ul>
                                 <li><a href="">BABY (0-36 month)</a></li>
                                 <li><a href="">View all</a></li>
@@ -142,8 +142,8 @@
                     </li>
 
 
-                    <li><a href="menGucci.html" class="container__navBar2__catergory">MEN</a>
-                        <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -380px;">
+                    <li class="active"><a href="menGucci.html" class="container__navBar2__catergory">MEN</a>
+                        <div class="container__navBar2__dropdown" id='children-dropdown' >
                             <ul>
                                 <li><a href=""><span> ARRIVALS</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -178,8 +178,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="watchesGucci.html" class="container__navBar2__catergory">WATCHES</a>
-                        <div class="container__navBar2__dropdown" id='watches-dropdown' style="margin-left: -560px;">
+                    <li class="active"><a href="watchesGucci.html" class="container__navBar2__catergory">WATCHES</a>
+                        <div class="container__navBar2__dropdown" id='watches-dropdown' >
                             <ul>
 
                                 <li><a href=""><span>WATCES</span></a></li>
@@ -192,8 +192,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="jewelryGucci.html" class="container__navBar2__catergory">JEWELRY</a>
-                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -740px;">
+                    <li class="active"><a href="jewelryGucci.html" class="container__navBar2__catergory">JEWELRY</a>
+                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' >
                             <ul>
                                 <li><a href=""><span>JUWELRY</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -209,8 +209,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="bagsGucci.html" class="container__navBar2__catergory">HANDBAGS</a>
-                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -918px;">
+                    <li class="active"><a href="bagsGucci.html" class="container__navBar2__catergory">HANDBAGS</a>
+                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' >
                             <ul>
                                 <li><a href=""><span>HANDBAGS</span></a></li>
                                 <li><a href="">View all</a></li>
