--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -593,8 +593,10 @@
 
             <div class="footer__top">
                 <h4>JOIN OUR CREATORS CLUB & GET 15% OFF</h4>
+
                 <button>
                     <p>SIGN UP FOR FREE</p>
+
                     <i class="fas fa-arrow-right"></i>
                 </button>
             </div>
@@ -778,7 +780,8 @@
                     <li>lorem</li>
                     <li>lorem</li>
                     <li>lorem</li>
-                    <li>lorem</li>
+                    <li> <i class="fa-thin fa-cart-circle-plus"></i>
+                    </li>
                 </ul>
 
             </div>
