media query category pages

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -21,9 +21,9 @@
 </head>
 
 <body onload="handleRenderByGender('women')" >
-
+<!-- 
     <div class="cart" style="position:sticky;width:300px;height:400px;background-color: green;top:30vh;z-index: 1;">    
-    </div>
+    </div> -->
 
     <div class="container">
 
