catergory html navbar

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -110,8 +110,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="childrenGucci.html" class="container__navBar2__catergory">CHILDREN </a>
-                        <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -200px;">
+                    <li class="active"><a href="childrenGucci.html" class="container__navBar2__catergory">CHILDREN </a>
+                        <div class="container__navBar2__dropdown" id='children-dropdown' >
                             <ul>
                                 <li><a href="">BABY (0-36 month)</a></li>
                                 <li><a href="">View all</a></li>
@@ -140,8 +140,8 @@
                     </li>
 
 
-                    <li><a href="menGucci.html" class="container__navBar2__catergory">MEN</a>
-                        <div class="container__navBar2__dropdown" id='children-dropdown' style="margin-left: -380px;">
+                    <li class="active"><a href="menGucci.html" class="container__navBar2__catergory">MEN</a>
+                        <div class="container__navBar2__dropdown" id='children-dropdown'>
                             <ul>
                                 <li><a href=""><span> ARRIVALS</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -176,8 +176,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="watchesGucci.html" class="container__navBar2__catergory">WATCHES</a>
-                        <div class="container__navBar2__dropdown" id='watches-dropdown' style="margin-left: -560px;">
+                    <li class="active"><a href="watchesGucci.html" class="container__navBar2__catergory">WATCHES</a>
+                        <div class="container__navBar2__dropdown" id='watches-dropdown'>
                             <ul>
 
                                 <li><a href=""><span>WATCES</span></a></li>
@@ -190,8 +190,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="jewelryGucci.html" class="container__navBar2__catergory">JEWELRY</a>
-                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -740px;">
+                    <li class="active"><a href="jewelryGucci.html" class="container__navBar2__catergory">JEWELRY</a>
+                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' >
                             <ul>
                                 <li><a href=""><span>JUWELRY</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -207,8 +207,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a href="bagsGucci.html" class="container__navBar2__catergory">HANDBAGS</a>
-                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' style="margin-left: -918px;">
+                    <li class="active"><a href="bagsGucci.html" class="container__navBar2__catergory">HANDBAGS</a>
+                        <div class="container__navBar2__dropdown" id='bags-dropdown' >
                             <ul>
                                 <li><a href=""><span>HANDBAGS</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -350,9 +350,9 @@
                 <p>By entering your email address<br> below, you consent to receiving<br> our newsletter with access<br>
                     to our latest collections,<br> events and initiatives. More<br> details on this are provided<br> in
                     our Privacy Policy</p>
-                <input type="email" name="" id="" placeholder="Email Adress"><br>
+                <input type="email" name="" id="" placeholder="Email Address"><br>
                 <p>STORE LOCATOR</p>
-                <input type="text" name="" id="" placeholder="City, Region< Contry">
+                <input type="text" name="" id="" placeholder="City, Region, Country">
             </div>
 
 
