--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/menGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/menGucci.html
@@ -209,7 +209,7 @@
                         </div>
                     </li>
                     <li class="active"><a href="bagsGucci.html" class="container__navBar2__catergory">HANDBAGS</a>
-                        <div class="container__navBar2__dropdown" id='jewelry-dropdown' >
+                        <div class="container__navBar2__dropdown" id='bags-dropdown' >
                             <ul>
                                 <li><a href=""><span>HANDBAGS</span></a></li>
                                 <li><a href="">View all</a></li>
@@ -319,9 +319,9 @@
                 <p>By entering your email address<br> below, you consent to receiving<br> our newsletter with access<br>
                     to our latest collections,<br> events and initiatives. More<br> details on this are provided<br> in
                     our Privacy Policy</p>
-                <input type="email" name="" id="" placeholder="Email Adress"><br>
+                <input type="email" name="" id="" placeholder="Email Address"><br>
                 <p>STORE LOCATOR</p>
-                <input type="text" name="" id="" placeholder="City, Region< Contry">
+                <input type="text" name="" id="" placeholder="City, Region, Country">
             </div>
 
 
