gucci category page

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
@@ -235,7 +235,7 @@
 
         <div class="catergory__buttons">
             <div class="catergory__name">
-                <h3><span>WOMEN</span> | Handbags</h3>
+                <h3><span>BAGS</span> | Handbags</h3>
             </div>
 
 
