--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -92,10 +92,10 @@
                 <option value="fantasyg">Fantasyg</option>
             </select>
 
-            <select class="filters__sort" onclick="handleSort(event)">
+            <select class="filters__sort" onchange="handleSort(event)">
                 <option value="" disabled selected>Sort By</option>
-                <option value="sortAsc">price - High To Low</option>
-                <option value="sortDesc">price - Low To High</option>
+                <option value="sortAsc">price - Low To High </option>
+                <option value="sortDesc">price - High To Low </option>
             </select>
         
     </div>  
