--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -232,32 +232,32 @@
             </div>
         </div>
 
-        <div style="margin-top: 4vh;" class="container__main">
+        <div class="container__main">
             <img src="https://media.gucci.com/content/DarkGray_ProductPush_Standard_700x700/1643275817/ProductPush_678864UKEAV8739_001_Light.jpg"
                 alt="">
-            <p style="font-size: smaller;  color: black;">GUCCI ARIA</p>
-            <p style="font-size: 3em;  color: black;">Valentine`s Day small Padlock bag</p>
+            <p class="gucci--Aria">GUCCI ARIA</p>
+            <p class="gucci--Title">Valentine`s Day small Padlock bag</p>
             <button>SHOP NOW</button>
         </div>
 
         <div class="container__main">
-            <img src="https://media.gucci.com/content/GiantEditorialStandard_1366x1643/1643205608/GiantEditorialStandard_VDAY-2022-025_001_Default.jpg"
+            <img class="gucci--mainPageImg" src="https://media.gucci.com/content/GiantEditorialStandard_1366x1643/1643205608/GiantEditorialStandard_VDAY-2022-025_001_Default.jpg"
                 alt="">
-            <p style="font-size: smaller;  color: black;">GUCCI ARIA</p>
-            <p style="font-size: 3em;  color: black;">Valentine's Day Gifts</p>
+            <p class="gucci--Aria">GUCCI ARIA</p>
+            <p class="gucci--Title">Valentine's Day Gifts</p>
             <button>SHOP THE COLLECTION</button>
         </div>
 
         <div class="container__main">
             <img src="https://media.gucci.com/content/DarkGray_ProductPush_Standard_700x700/1637767844/ProductPush_67414892THG8563_001_Light.jpg"
                 alt="">
-            <p style="font-size: smaller;  color: black;">GUCCI ARIA</p>
-            <p style="font-size: 3em;  color: black;">Medium tote with Interlocking G</p>
+            <p class="gucci--Aria">GUCCI ARIA</p>
+            <p class="gucci--Title">Medium tote with Interlocking G</p>
             <button>SHOP BAGS</button>
         </div>
 
         <div class="container__main">
-            <img style="width: 100%; margin-bottom: 10em;"
+            <img class="gucci--imgBeforeStories"
                 src="https://media.gucci.com/content/HomepageVideoBackgroundStandard_1300x758/1636100137/HomepageVideoBackgroundStandard_Love-Parade-showspace-02_001_Default.jpg"
                 alt="">
         </div>
@@ -265,7 +265,7 @@
         <div class="container__stories">
             <div class="container__stories__left">
 
-                <div style="margin-bottom: 5.5em;" class="stories__left__bag">
+                <div  class="stories__left__bag">
                     <img src="https://media.gucci.com/content/StyleNewsSingle_Standard_340x202/1642768243/StyleNewsSingle_Bamboo1947-01_001_Default.jpg"
                         alt="">
                     <p>Reinterpreting the Gucci Bamboo 1947</p>
@@ -280,8 +280,8 @@
                 </div>
             </div>
 
-            <div style="margin-right: 1em; margin-top: -9.7em;" class="stories__middle">
-                <p style="font-size: 3em;  color: black; ">STORIES</p>
+            <div class="stories__middle">
+                <p class="stories__middle__title">STORIES</p>
                 <img src="https://media.gucci.com/content/StyleNewsDoubleVertical_Standard_340x602/1635929154/StyleNewsDoubleVertical_Love-Parade-LOOK-01_001_Default.jpg"
                     alt="">
                 <p>Love Parade: The Looks</p>
@@ -290,7 +290,7 @@
 
             <div class="container__stories__right">
 
-                <div style="margin-bottom: 4.2em;" class="stories__right__gucci">
+                <div  class="stories__right__gucci">
                     <img src="https://media.gucci.com/content/StyleNewsSingle_Standard_340x202/1643113803/StyleNewsSingle_Vodcast-beloved-01_001_Default.jpg"
                         alt="">
                     <p>In Depth: Alessandro Michele on<br> Gucci Beloved Bags</p>
@@ -308,14 +308,14 @@
 
         <div class="container__bottom">
             <div class="bottom_services">
-                <p style="font-size: large;">EXCLUSIVE SERVICES</p>
+                <p class="container__bottom__title">EXCLUSIVE SERVICES</p>
                 <p>Gucci Services</p>
                 <p>Gucci Osteria Beverly Hills<br> da Massimo Bottura</p>
                 <p>Book An Appointment</p>
             </div>
 
             <div class="bottom_help">
-                <p style="font-size: large;">NEED HELP?</p>
+                <p class="container__bottom__title">NEED HELP?</p>
                 <p>Contact Us</p>
                 <p>Shipping Services</p>
                 <p>Returns & Exchanges</p>
@@ -325,7 +325,7 @@
             </div>
 
             <div class="bottom_company">
-                <p style="font-size: large;">THE COMPANY</p>
+                <p class="container__bottom__title">THE COMPANY</p>
                 <p>About Gucci</p>
                 <p>Gucci Equilibrium</p>
                 <p>Code of Ethics</p>
@@ -335,7 +335,7 @@
             </div>
 
             <div class="bottom_find">
-                <p style="font-size: large;">FIND US ON</p>
+                <p class="container__bottom__title">FIND US ON</p>
                 <p>Facebook</p>
                 <p>Twitter</p>
                 <p>Instagram</p>
@@ -346,7 +346,7 @@
             </div>
 
             <div class="bottom_sign">
-                <p style="font-size: large;">SIGN UP FOR GUCCI UPDATES</p>
+                <p class="container__bottom__title">SIGN UP FOR GUCCI UPDATES</p>
                 <p>By entering your email address<br> below, you consent to receiving<br> our newsletter with access<br>
                     to our latest collections,<br> events and initiatives. More<br> details on this are provided<br> in
                     our Privacy Policy</p>
@@ -358,7 +358,7 @@
 
 
         </div>
-        <p style="background: rgb(26, 25, 25); font-size: small; padding: 2em; margin-top: 0;color:white">© 2016 - 2020 Guccio
+        <p class="gucciRights" >© 2016 - 2020 Guccio
             Gucci S.p.A. - All rights reserved. SIAE LICENCE # 2294/I/1936 and 5647/I/1936</p>
 
 
